--- a/pom.xml
+++ b/pom.xml
@@ -16,14 +16,14 @@
   </properties>
 
   <dependencies>
-    <!-- Jackson для работы с JSON -->
+    <!-- Jackson (для работы с JSON) -->
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
       <version>2.15.0</version>
     </dependency>
 
-    <!-- Jetty сервер -->
+    <!-- Jetty (сервер) -->
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>jetty-server</artifactId>
@@ -57,7 +57,7 @@
         </configuration>
       </plugin>
 
-      <!-- Maven Shade Plugin для сборки jar -->
+      <!-- Maven Shade Plugin (для сборки jar) -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
