--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,20 @@
       <version>5.0.0</version>
       <scope>provided</scope>
     </dependency>
+
+    <!-- SLF4J API -->
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>2.0.9</version>
+    </dependency>
+
+    <!-- Реализация логгера (Logback) -->
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>1.4.14</version>
+    </dependency>
   </dependencies>
 
   <build>
