--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@
       <artifactId>logback-classic</artifactId>
       <version>1.4.14</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.3.1</version>
+    </dependency>
   </dependencies>
 
   <build>
