--- a/pom.xml
+++ b/pom.xml
@@ -47,14 +47,21 @@
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
-      <version>1.7.36</version>
+      <version>2.0.16</version>
     </dependency>
 
     <!-- Реализация логгера (Logback) -->
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
-      <version>1.2.11</version>
+      <version>1.5.8</version>
+    </dependency>
+
+    <!-- Logback Core (опционально) -->
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-core</artifactId>
+      <version>1.5.8</version>
     </dependency>
 
     <dependency>
@@ -90,6 +97,27 @@
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
       <version>3.3.3</version>
+    </dependency>
+
+    <!-- Spring Boot Starter Web для REST-контроллеров -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+      <version>3.3.4</version>
+    </dependency>
+
+    <!-- Spring WebFlux (для WebClient) -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-webflux</artifactId>
+      <version>3.3.1</version>
+    </dependency>
+
+    <!-- Reactor Core (для Mono и Flux) -->
+    <dependency>
+      <groupId>io.projectreactor</groupId>
+      <artifactId>reactor-core</artifactId>
+      <version>3.6.11</version> <!-- Укажи актуальную версию -->
     </dependency>
   </dependencies>
 
